# lca-rs-workspace

./: .gitignore  Cargo.toml
ecoinvent-example/: .gitignore  Cargo.toml
ecoinvent-example/src/: main.rs
ecospold-parser/: .gitignore  Cargo.toml
ecospold-parser/src/: main.rs  model.rs
lca-core/: Cargo.toml  README.md
lca-core/src/: context.rs  device.rs  error.rs  lca_matrix.rs  lca_system.rs  lib.rs  matrix.rs  ops.rs  sparse_matrix.rs  traits.rs  vector.rs
lca-core/src/shaders/: axpy.wgsl  check_positive_diagonal.wgsl  dot_product_pass1.wgsl  dot_product_pass2.wgsl  elementwise_mul.wgsl  extract_diagonal.wgsl  invert_elements.wgsl  spmv_coo.wgsl  spmv_csr.wgsl  spmv_csr_transpose.wgsl
lca-core/tests/: matrix_tests.rs
lca-lsolver/: Cargo.toml  README.md
lca-lsolver/examples/: pentadiagonal_solve.rs
lca-lsolver/src/: dense_matrix.rs  lib.rs
lca-lsolver/src/algorithms/: gpu_sparse_bicgstab.rs  gpu_sparse_cg.rs  gpu_sparse_cg_checked.rs  mod.rs
lca-lsolver/tests/: gpu_solve_test.rs
lca-rs/: Cargo.toml
lca-rs/examples/: native_client.rs
lca-rs/src/: eval_lca_system.rs  lca_matrix.rs  lca_system.rs  lib.rs  model.rs
lca-rs/src/error/: compilation_error.rs  mod.rs
lca-webservice/: Cargo.toml  README.md
lca-webservice/src/: error.rs  handler.rs  main.rs  model.rs  openapi.rs  sse.rs
lca_rs_wasm_example/: index.html  index.js  package-lock.json  package.json  webpack.config.js
