[package]
name = "ecospold-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] } # Correct feature for Serde support
serde_json = "1.0" # Added again for flexible comment parsing
