[package]
name = "lca-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # For WASM and native builds

[dependencies]
lca-lsolver = { path = "../lca-lsolver" }
lca-core = { path = "../lca-core" }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
log.workspace = true # For logging facade
thiserror = "1.0" # For custom error type
wasm-bindgen = { workspace = true, optional = true } # Optional for WASM builds

# Native-specific dependencies (optional, e.g., for native examples or testing)
pollster = { version = "0.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["error", "from"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11" # For logging in examples

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true } # Useful for debugging WASM panics
js-sys = "0.3"
wasm-logger = { version = "0.2", optional = true } # Optional logger for WASM
lca-lsolver = { path = "../lca-lsolver", features = ["wasm"]}
lca-core = { path = "../lca-core", features = ["wasm"] }

[features]
default = ["native"] # Default to native build features
native = ["pollster"] # Features needed for native execution
wasm = ["wasm-bindgen", "console_error_panic_hook", "wasm-logger"] # Features needed for WASM build/execution
