[package]
name = "lca-webservice"
version = "0.1.0"
edition = "2021" # Using 2021 edition for newer features

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI & Swagger UI
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

# Server-Sent Events
axum-streams = { version = "0.21", features = ["json"] }
futures = "0.3" # For stream utilities

# HTTP Utilities & Middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# LCA Core Logic (Path dependencies)
lca-rs = { path = "../lca-rs" }
lca-core = { path = "../lca-core" } # Added for direct GpuDevice usage

# Input Validation
validator = { version = "0.18", features = ["derive"] }

# Stream utilities
tokio-stream = { version = "0.1", features = ["sync"] } # For ReceiverStream

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-log = "0.2" # Bridges 'log' crate events to 'tracing'
log = "0.4" # To align with lca-rs if it uses a specific version, and for tracing-log

# Error Handling
thiserror = "1.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

# For wasm_bindgen types if they appear in lca-rs public API and we need to handle them
# wasm-bindgen = { version = "0.2", optional = true } # Only if strictly needed

[dev-dependencies]
# Add any development-specific dependencies here, e.g., for integration tests
# reqwest = { version = "0.12", features = ["json", "stream"] }
# tokio-stream = "0.1"
